--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportPlanCadre.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportPlanCadre.cshtml
@@ -28,7 +28,8 @@
 
     td {
         page-break-inside: avoid;
-        page-break-before: auto
+        page-break-before: auto;
+        vertical-align: top;
     }
 
     thead {
